<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:weightSum="4"
	android:background="@drawable/res_bg_settings"
	>
	<LinearLayout 
		android:id="@+id/freeplayContsLayout"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_weight="2"
		>
		<TextView
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/freeplay_label_conts_title"
			android:background="#16373E"
			android:textSize="18sp"
			android:paddingLeft="5dp"
			/>
		<ImageView
			android:layout_width="fill_parent"
			android:layout_height="1dp"
			android:background="#FFFFFF"
			android:layout_margin="5dp"
			/>
		<TextView
			android:id="@+id/freeplayTotalNationsText"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:text="@string/freeplay_label_total_nations"
			android:textSize="18sp"
			android:gravity="center"
			android:layout_marginBottom="5dp"
			android:textColor="#FFFFFF"
			/>
		<Button
			android:text="@string/freeplay_button_selectcont"
			android:id="@+id/freeplaySelectContBtn"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="18sp"
			/>
	</LinearLayout>
	<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:layout_weight="1"
		>
		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="left"
			android:text="@string/freeplay_label_ordertype"
			android:textSize="18sp"
			android:background="#0F5056"
			android:paddingLeft="5dp"
			/>
		<RadioGroup android:id="@+id/freeplayRadioGroup"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal"
			android:gravity="center"
			android:weightSum="2"
			>
			<RadioButton
				android:id="@+id/freeplayRandomRadio"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/freeplay_radio_random"
				android:checked="true"
				android:layout_weight="1"
				android:layout_gravity="center"
				android:layout_marginLeft="15dp"
				android:textSize="18sp"
				/>
			<RadioButton
				android:id="@+id/freeplayNameRadio"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/freeplay_radio_a2z"
				android:layout_weight="1"
				android:layout_gravity="center"
				android:textSize="18sp"
				/>
		</RadioGroup>
	</LinearLayout>
	<LinearLayout 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
		android:weightSum="2"
		android:layout_weight="1"
		>
		<Button
			android:text="@string/freeplay_button_f2n"
			android:id="@+id/freeplayF2nBtn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:textSize="18sp"
			/>
		<Button
			android:text="@string/freeplay_button_n2f"
			android:id="@+id/freeplayN2fBtn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:textSize="18sp"
			/>
	</LinearLayout>
</LinearLayout>
