<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="#F02F4F4F"
	android:paddingLeft="10dp"
	android:paddingRight="10dp"
	android:paddingTop="20dp"
	>
	<RelativeLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		>
		<RatingBar android:id="@+id/popupFinishedHighRatingBar"
			style="@style/myRatingBarSmall"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:numStars="3"
			android:layout_alignParentTop="true"
			android:layout_centerHorizontal="true"
			/>
		<TextView
			android:id="@+id/popupFinishedLevelIndexText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textColor="#FFFFFF"
			android:textSize="15sp"
			android:text="@string/popup_finished_level_index"
			android:layout_alignParentLeft="true"
			android:layout_alignParentTop="true"
			/>
		<TextView
			android:id="@+id/popupFinishedHighScoreText"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:gravity="right"
			android:textColor="#FFFFFF"
			android:textSize="18sp"
			android:text="@string/popup_finished_highscore"
			android:layout_centerHorizontal="true"
			android:layout_below="@id/popupFinishedHighRatingBar"
			/>
	</RelativeLayout>
	<ImageView
		android:layout_width="fill_parent"
		android:layout_height="1dp"
		android:background="#FFFFFF"
		android:layout_marginTop="10dip"
	/>
	<TextView
		android:id="@+id/popupFinishedAmazingText"
		android:gravity="center"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textColor="#FFFFFF"
		android:textSize="20sp"
		android:text="@string/popup_finished_amazing"
		android:layout_marginTop="15dip"
		/>
	<TextView
		android:id="@+id/popupFinishedCurrentScoreText"
		android:gravity="center"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textColor="#FFFFFF"
		android:textSize="20sp"
		android:text="@string/popup_finished_score_current"
		android:layout_marginTop="10dip"
		/>
	<TextView
		android:id="@+id/popupFinishedNewHighScoreText"
		android:gravity="center"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textColor="#FFFFFF"
		android:textSize="20sp"
		android:text="@string/popup_finished_newhighscore"
		android:layout_marginTop="10dip"
		/>
	<RatingBar android:id="@+id/popupFinishedCurrentRatingBar"
		style="@style/myRatingBarBig"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center"
		android:numStars="3"
		android:layout_marginTop="10dip"
		/>
	<TextView
		android:id="@+id/popupFinishedLimitNoticeText"
		android:gravity="center"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:textColor="#FFFFFF"
		android:textSize="15sp"
		android:text="@string/popup_finished_limit_notice"
		/>
	<LinearLayout 
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:gravity="center"
		android:weightSum="3"
		android:layout_marginTop="5dip"
		>
		<Button android:text="@string/popup_finished_btn_retry"
			android:id="@+id/popupFinishedRetryBtn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:textSize="18sp"
			/>
		<Button android:text="@string/popup_finished_btn_nextlevel"
			android:id="@+id/popupFinishedNextBtn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:textSize="18sp"
			/>
		<Button android:text="@string/popup_finished_btn_back"
			android:id="@+id/popupFinishedBackBtn"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:textSize="18sp"
			/>
	</LinearLayout>
</LinearLayout>
